@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class GSM {
    name
    vatNumber
    phoneNumber
    email
}

class VFM {
    name
    vatNumber
    phoneNumber
    email
}

class Vehicle {
    brand
    model
    type
    tare
    gross weight
    current KM
    register date
    acquisition date
    maintenance/check-up frequency
    plate number
    last maintenance date
}

class VehicleRepository {
    vehicles
}

class AgendaEntry {
     title
     taskDescription
     urgency
     duration
     associatedGreenSpace
     associatedTeam
     associatedVehicles
     status
     startDate
}

class Agenda {
    entries
    gsm
}

class AgendaRepository {
    agendas
}

'class User {
'    name
'    email
'    password
'}

VFM "1" -- "1" Vehicle: registers >
GSM "1" - "1" Vehicle: assigns >
Vehicle "1" - "1" AgendaEntry: assigned to >
Vehicle "1" -- "1" VehicleRepository: stored in >
GSM "1" --- "1" Agenda: uses >
AgendaEntry "1" --- "1" Agenda: is shown in >
Agenda "1" -- "1" AgendaRepository: stored in >

@enduml